--- a/src/css/style.css
+++ b/src/css/style.css
@@ -197,7 +197,7 @@ body {
     border-radius: 8px;
     border: 0;
     margin: 0 auto 5px;
-    padding: 0 10px;
+    padding: 15px;
     height: 55px;
     width: 50%;
 }
